set a minimum width on the headers title to prevent word wrap on mobile devices

--- a/src/wwwroot/assets/css/header_and_footer.scss
+++ b/src/wwwroot/assets/css/header_and_footer.scss
@@ -25,6 +25,7 @@
 		
 		.title {
 			font-weight:bold;
+			min-width:160px;
 			a {
 				
 				color: $COLOR_PRIMARY_TEXT;
